crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_arithmetic_expression.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a$((1+2))b c\")?"
---
TokenizerResult(
  input: "a$((1+2))b c",
  result: [
    Word("a$((1+2))b", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 10,
        line: 1,
        column: 11,
      ),
    )),
    Word("c", SourceSpan(
      start: SourcePosition(
        index: 11,
        line: 1,
        column: 12,
      ),
      end: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
    )),
  ],
)
