crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_arithmetic_expression_with_space.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$(( 1 ))\")?"
---
TokenizerResult(
  input: "$(( 1 ))",
  result: [
    Word("$(( 1 ))", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 8,
        line: 1,
        column: 9,
      ),
    )),
  ],
)
