crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_braced_parameter_expansion-2.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a${x}b\")?"
---
TokenizerResult(
  input: "a${x}b",
  result: [
    Word("a${x}b", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
  ],
)
