crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_command_substitution_containing_extglob.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"echo $(echo !(x))\")?"
---
TokenizerResult(
  input: "echo $(echo !(x))",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("$(echo !(x))", SourceSpan(
      start: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        index: 17,
        line: 1,
        column: 18,
      ),
    )),
  ],
)
