crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_command_substitution_with_subshell.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$( (:) )\")?"
---
TokenizerResult(
  input: "$( (:) )",
  result: [
    Word("$( (:) )", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 8,
        line: 1,
        column: 9,
      ),
    )),
  ],
)
