crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_comment_at_eof.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"a #comment\")?"
---
TokenizerResult(
  input: "a #comment",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 1,
        line: 1,
        column: 2,
      ),
    )),
  ],
)
